[gd_scene load_steps=9 format=2]

[ext_resource path="res://Tile/nivel1.png" type="Texture" id=1]
[ext_resource path="res://Jugador1.gd" type="Script" id=2]
[ext_resource path="res://Sprites/j1_idle.png" type="Texture" id=3]
[ext_resource path="res://Sprites/j1_run.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 476.596, 7.40233 )

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 16.7241 )

[sub_resource type="Animation" id=4]

resource_name = "idle"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cuerpo_j1/spr_1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cuerpo_j1/spr_1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cuerpo_j1/spr_1:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("cuerpo_j1/spr_1:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]

resource_name = "running"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cuerpo_j1/spr_1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cuerpo_j1/spr_1:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cuerpo_j1/spr_1:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("cuerpo_j1/spr_1:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[node name="main" type="Node" index="0"]

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 1485.4, 37.0023 )
texture = ExtResource( 1 )

[node name="floor" type="StaticBody2D" parent="background" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/floor" index="0"]

position = Vector2( -1219, -9.75 )
shape = SubResource( 2 )

[node name="Jugador1" type="Position2D" parent="." index="1"]

position = Vector2( -54.2593, -40.6379 )
script = ExtResource( 2 )
gravity = 5000.0
movement_velocity = 2200

[node name="cuerpo_j1" type="KinematicBody2D" parent="Jugador1" index="0"]

position = Vector2( 0, 1.43528 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision_j1" type="CollisionShape2D" parent="Jugador1/cuerpo_j1" index="0"]

position = Vector2( 4.80674, 3.52494 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="spr_1" type="Sprite" parent="Jugador1/cuerpo_j1" index="1"]

position = Vector2( 0.694307, -2.34322 )
texture = ExtResource( 3 )
hframes = 2
_sections_unfolded = [ "Animation", "Region", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="Jugador1/cuerpo_j1" index="2"]

position = Vector2( 17.9939, 72.5275 )
scale = Vector2( 1.43731, 1.2118 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="animation_1" type="AnimationPlayer" parent="Jugador1" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 4 )
anims/running = SubResource( 5 )
blend_times = [  ]


